--- a/styles.css
+++ b/styles.css
@@ -2907,6 +2907,11 @@ body.mobile-tabs-active [data-tab-panel].tab-entering.slide-from-right {
         padding-top: 1rem;
     }
     
+    /* Small gap between mobile tab bar and upgrade clock card */
+    body.mobile-tabs-active .upgrade-clock {
+        margin-top: 3px;
+    }
+
     /* Make sections full width */
     body.mobile-tabs-active .stats-section {
         padding: 0 1rem;
